# General-programming-stuff

./: README.md
game-of-life/: CMakeLists.txt  Doxyfile  README.md
game-of-life/doc/: GAME_OF_LIFE_README.md  RuleAnna.md  RuleHenrik.md  RuleMarcus.md  textfiles.md
game-of-life/include/: game.h  gameWorld.h  gamesettings.h  ruleset.h
game-of-life/src/: game.cpp  gameWorld.cpp  gameoflifemain.cpp  gamesettings.cpp  ruleset.cpp
game-of-life/test/: CatchMain.cpp  testgameoflife.cpp  testruleanna.cpp  testrulehenrik.cpp  testrulemarcus.cpp
game-of-life/textfiles/: 10row.txt  explosion.txt  gliderandblinkers.txt  spacetruckin.txt  storexplosion.txt  test001.txt
mathexpression/: CMakeLists.txt  README.md
mathexpression/include/: MathExpression.h
mathexpression/src/: MathExpression.cpp  main.cpp
mathexpression/test/: CatchMain.cpp  MathExpressionTest.cpp
